# unitcalc

./: .gitignore  Eval.hs  Main.hs  Parse.hs  README.md  Test.hs  Types.hs  Util.hs  stdlib.txt  unitcalc.cabal
