name: unitcalc
version: 0.1
description: A calculator supporting units of measurement
license: MIT
license-file: LICENSE
author: Nathan Stoddard
maintainer: nstodda@purdue.edu
build-type: Simple
cabal-version: >=1.2

extra-source-files:
    README.md
    LICENSE
data-files:
    stdlib.txt

executable unitcalc
    main-is: Main.hs
    build-depends: base, directory, strict, haskeline, wl-pprint, parsec, transformers, containers, filepath
