name: unitcalc
version: 0.3
description: A calculator supporting units of measurement
license: MIT
license-file: LICENSE
author: Nathan Stoddard
build-type: Simple
cabal-version: >=1.2

extra-source-files:
    README.md
    LICENSE
data-files:
    stdlib.txt

executable unitcalc
    main-is: Main.hs
    build-depends: base, directory, strict, haskeline, wl-pprint, parsec, transformers, containers, filepath
    ghc-options: -Werror -Wall -fwarn-tabs -fwarn-incomplete-record-updates  -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-type-defaults

test-suite unitcalc-tests
    main-is: Test.hs
    type: exitcode-stdio-1.0
    build-depends: test-framework, test-framework-hunit, HUnit
    ghc-options: -Werror -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-type-defaults
